Fixed bug with Facebook login on landing page.
Added missing dips to package.json

Post/Comments components  work in progress

--- a/web/src/app/components/landing-page/landing-page.html
+++ b/web/src/app/components/landing-page/landing-page.html
@@ -48,18 +48,18 @@
     <div class="info">
         <div class="row">
             <div class="col-sm-4 section">
-                <img src="../../../assets/img/search.png" alt="">
+                <img ng-src="{{$ctrl.searchImg}}" alt="">
 
                 <h3>Discover life transforming sermons.</h3>
                 <p>Do you remember all your pastor’s sermon last month? How about last year? You're not alone.</p>
             </div>
             <div class="col-sm-4 section">
-                <img src="./../../assets/img/note.png" alt="">
+                <img ng-src="{{$ctrl.noteImg}}" alt="">
                 <h3>Takes notes in a central place.</h3>
                 <p>It's good to take notes. How about keeping them safe, organized and accessible forever.</p>
             </div>
             <div class="col-sm-4 section">
-                <img src="./../../assets/img/social.png" alt="">
+                <img ng-src="{{$ctrl.socialImg}}" alt="">
                 <h3>Share and gain inspiration.</h3>
                 <p>As iron sharpens iron, so one person sharpens and influences another through discussion.</p>
             </div>
