--- a/web/src/app/app.less
+++ b/web/src/app/app.less
@@ -1,6 +1,6 @@
 @import '~angular-material/angular-material.css';
 @import '~angular-loading-bar/build/loading-bar.css';
-
+@import '~material-design-iconic-font/dist/css/material-design-iconic-font.css';
 
 @import '~bootstrap/less/bootstrap';
 
