--- a/web/src/assets/styles/scripturedin.less
+++ b/web/src/assets/styles/scripturedin.less
@@ -92,7 +92,7 @@ md-tabs>md-tabs-wrapper>md-tabs-canvas>md-pagination-wrapper>md-tab-item:not([di
 
 body {
     height: auto;
-    background: #fff;
+    // background: #fff;
 }
 
 #frame {
