Fixed bug with Facebook login, and bug with study ui.

--- a/app/dev/css/scripturedin.css
+++ b/app/dev/css/scripturedin.css
@@ -672,3 +672,10 @@ wysiwyg-edit.summary .tinyeditor .sizer {
 .lv-img {
     width: 42px;
 }
+
+input.line-input {
+    border-top: none;
+    border-right: none;
+    border-left: none;
+
+}
