Work in progress.

--- a/web/src/app/app.less
+++ b/web/src/app/app.less
@@ -94,7 +94,7 @@
 //@import '../assets/styles/less/inc/vendor-overrides/fileinput';
 //@import '../assets/styles/less/inc/vendor-overrides/light-gallery';
 //@import '../assets/styles/less/inc/vendor-overrides/waves';
-//@import '../assets/styles/less/inc/vendor-overrides/ui-bootstrap';
+@import '../assets/styles/less/inc/vendor-overrides/ui-bootstrap';
 //@import '../assets/styles/less/inc/vendor-overrides/ng-table';
 //@import '../assets/styles/less/inc/vendor-overrides/sweetalert';
 //@import '../assets/styles/less/inc/vendor-overrides/malihu-custom-scrollbar';
