--- a/app/dev/module/component/feed/feed.html
+++ b/app/dev/module/component/feed/feed.html
@@ -1,4 +1,4 @@
-<div class="card animate-show" ng-hide="feed.remove">
+<div class="card animate-show" ng-hide="feed.remove" id="{{::feed.id}}">
     <div class="card-header">
         <div class="media">
             <div class="pull-left">
