--- a/web/src/app/common/nav-bar/nav-bar.html
+++ b/web/src/app/common/nav-bar/nav-bar.html
@@ -58,7 +58,7 @@
                 </i> Sermons</a>
             </li>
             <li data-ui-sref-active="active">
-                <a data-ui-sref="base.bible">
+                <a data-ui-sref="bible">
                     <i>
                     <md-icon md-svg-src="/img/icons/bible.svg"></md-icon>
                 </i> Bible</a>
