commit all  pending changes.

--- a/web/src/app/components/common/fabmenu/fabmenu.html
+++ b/web/src/app/components/common/fabmenu/fabmenu.html
@@ -6,7 +6,7 @@
             </md-button>
         </md-fab-trigger>
         <md-fab-actions ng-hide="!$ctrl.isOpen">
-            <md-button ng-if="$ctrl.user.is_pastor" ui-sref="base.sermon-create" class="md-fab md-mini md-button md-ink-ripple" aria-label="New Sermon">
+            <md-button ng-if="$ctrl.user.is_pastor" ui-sref="new-sermon" class="md-fab md-mini md-button md-ink-ripple" aria-label="New Sermon">
                 <md-tooltip md-direction="left">
                     New Sermon
                 </md-tooltip>
