--- a/web/src/assets/styles/scripturedin.less
+++ b/web/src/assets/styles/scripturedin.less
@@ -1,3 +1,5 @@
+[ng-quill-editor] { display: block; }
+
 .chapter {
     padding: 10px 20px;
 }
@@ -191,10 +193,14 @@ a.like {
     }
 }
 
+ul.privacy {
+    padding: 0px;
+}
+
 .privacy li {
-    padding: 10px;
+    //padding: 10px;
     background-color: rgba(158, 158, 158, 0.12);
-    margin-bottom: 5px;
+    //margin-bottom: 5px;
 }
 
 .privacy li.selected>a,
@@ -507,13 +513,6 @@ body.overflow {
 }
 
 
-/*#main {*/
-
-
-/*padding-top: 60px;*/
-
-
-/*}*/
 
 .scripture .card-header {
     padding: 15px;
