--- a/web/src/app/app.less
+++ b/web/src/app/app.less
@@ -1,8 +1,12 @@
 @import '~angular-material/angular-material.css';
 @import '~angular-loading-bar/build/loading-bar.css';
 @import '~material-design-iconic-font/dist/css/material-design-iconic-font.css';
-
+@import '~quill/dist/quill.core.css';
+@import '~quill/dist/quill.bubble.css';
+@import '~quill/dist/quill.snow.css';
+@import '~sweetalert2/dist/sweetalert2.css';
 @import '~bootstrap/less/bootstrap';
+@import '../../node_modules/fullcalendar/dist/fullcalendar.css';
 
 /*
  * LESS Plugins
@@ -28,7 +32,7 @@
 /*@import 'vendors/weather-icons/weather-icons';*/
 /*@import 'vendors/fileinput/fileinput';*/
 @import '~material-shadows/material-shadows';
-/*@import 'vendors/bower_components/Waves/src/less/waves';*/
+// @import 'vendors/bower_components/Waves/src/less/waves';
 
 /*
  * Load Website related LESS files
@@ -85,18 +89,18 @@
  * Vendor Overrides
  */
 ////@import '../assets/styles/less/inc/vendor-overrides/mediaelement';
-//@import '../assets/styles/less/inc/vendor-overrides/fullcalendar';
+@import '../assets/styles/less/inc/vendor-overrides/fullcalendar';
 ////@import '../assets/styles/less/inc/vendor-overrides/chosen';
 //@import '../assets/styles/less/inc/vendor-overrides/noUiSlider';
 //@import '../assets/styles/less/inc/vendor-overrides/farbtastic';
 //@import '../assets/styles/less/inc/vendor-overrides/summernote';
-//@import '../assets/styles/less/inc/vendor-overrides/bootstrap-datetimepicker';
+@import '../assets/styles/less/inc/vendor-overrides/bootstrap-datetimepicker';
 //@import '../assets/styles/less/inc/vendor-overrides/fileinput';
 //@import '../assets/styles/less/inc/vendor-overrides/light-gallery';
-//@import '../assets/styles/less/inc/vendor-overrides/waves';
+@import '../assets/styles/less/inc/vendor-overrides/waves';
 @import '../assets/styles/less/inc/vendor-overrides/ui-bootstrap';
 //@import '../assets/styles/less/inc/vendor-overrides/ng-table';
-//@import '../assets/styles/less/inc/vendor-overrides/sweetalert';
+@import '../assets/styles/less/inc/vendor-overrides/sweetalert';
 //@import '../assets/styles/less/inc/vendor-overrides/malihu-custom-scrollbar';
 
 @import "../assets/styles/scripturedin.less";
