--- a/web/src/app/components/common/nav-bar/nav-bar.html
+++ b/web/src/app/components/common/nav-bar/nav-bar.html
@@ -52,7 +52,7 @@
                 </ul>
             </li>
             <li data-ui-sref-active="active">
-                <a data-ui-sref="base.sermon-browse">
+                <a data-ui-sref="find-sermon">
                     <i>
                     <md-icon md-svg-src="/img/icons/speaker_notes_black.svg"></md-icon>
                 </i> Sermons</a>
